ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/*
            backend:
              serviceName: k8s-server-api
              servicePort: 80
          - path: /*
            backend:
              serviceName: k8s-client
              servicePort: 80
